[tool.poetry]
name = "depeche-db"
version = "0.4.4"
description = "A library for building event-based systems on top of PostgreSQL"
authors = ["Martin Vielsmaier <martin@vielsmaier.net>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/depeche-py/depeche-db"
repository = "https://github.com/depeche-py/depeche-db"
documentation = "https://depeche-py.github.io/depeche-db/"
keywords = ["sqlalchemy", "postgresql", "event-driven", "event store", "message store"]
classifiers = [
"Development Status :: 3 - Alpha",
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",
"Topic :: Database",
"Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = ">=1.4.30"
sqlalchemy-utils = "^0.41.1"
psycopg2 = "^2.9.6"
#pypgoutput = "^0.0.3"
#iterators = "^0.2.0"
#click = "^8.1.6"
pals = "^0.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-watch = "^4.2.0"
black = "^23.3.0"
mypy = "^1.3.0"
python-language-server = "^0.36.2"
ruff = "^0.0.285"
pydantic = "^2.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"
fix = true
select = [
    # pycodestyle checks.
    "E",
    "W",
    # pyflakes checks.
    "F",
    # flake8-bugbear checks.
    "B0",
    # flake8-comprehensions checks.
    "C4",
    # isort
    "I",
]
ignore = [
    "E501",  # line too long -> enforced by black
]
[tool.ruff.per-file-ignores]
"*/tests/**.py" = ["B018"]  # allow useless var access in tests
