[project]
name = "depeche-db"
version = "0.12.3"
description = "A library for building event-based systems on top of PostgreSQL"
authors = [{ name = "Martin Vielsmaier", email = "martin@vielsmaier.net" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
keywords = [
    "sqlalchemy",
    "postgresql",
    "event-driven",
    "event store",
    "message store",
    "event sourcing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]
dependencies = [
    "sqlalchemy>=1.4.30",
    "sqlalchemy-utils>=0.41.1,<0.42",
    "pals>=0.3.5,<0.4",
    "asyncer>=0.0.8,<0.0.9",
]

[project.optional-dependencies]
psycopg2 = ["psycopg2~=2.9"]
psycopg = ["psycopg>=3.2.1"]

[project.urls]
Homepage = "https://github.com/depeche-py/depeche-db"
Repository = "https://github.com/depeche-py/depeche-db"
Documentation = "https://depeche-py.github.io/depeche-db/"
Changelog = "https://depeche-py.github.io/depeche-db/CHANGELOG/"

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9",
    "pytest-watcher",
    "black>=23.3.0,<24",
    "mypy>=1.3.0,<2",
    "python-language-server>=0.36.2,<0.37",
    "ruff>=0.0.285,<0.0.286",
    "pydantic~=2.4",
    "pytest-cov>=4.1.0,<5",
    "pytest-asyncio>=0.26.0,<0.27",
    "pytz~=2025.2",
    "yappi>=1.6.10,<2",
    "types-pytz>=2025.2.0.20250516,<2026",
]
docs = [
    "mkdocs>=1.5.3,<2",
    "mkdocs-mermaid2-plugin>=1.1.1,<2",
    "mkdocs-material>=9.4.6,<10",
    "mkdocs-diagrams>=1.0.0,<2",
    "pymdown-extensions>=10.3.1,<11",
    "mkdocstrings[python]>=0.23.0,<0.24",
    "mkdocs-alias-plugin>=0.6.0,<0.7",
    "mkdocs-macros-plugin>=1.0.4,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"
fix = true
select = [
    # pycodestyle checks.
    "E",
    "W",
    # pyflakes checks.
    "F",
    # flake8-bugbear checks.
    "B0",
    # flake8-comprehensions checks.
    "C4",
    # isort
    "I", ]
ignore = [
    "E501", ] # line too long -> enforced by black

[tool.ruff.per-file-ignores]
"*/tests/**.py" = ["B018"]  # allow useless var access in tests
